# alcor-utils

./: .gitignore  .gitmodules  CMakeLists.txt  readout.cc
annealing/: run.sh
arduino/: arduino_get.py  arduino_server.py  start_arduino_server.sh
conf/: .gitignore  alcor-align.cfg  alcor-sync.cfg  bo.timing.readout.conf  drich.hama1.fbk.readout.conf  readout.conf  rich3.bcom.readout.conf  rich3.bcom.readout.conf.org  template.readout.conf
control/: .gitignore  README.txt  alcorDump.py  alcorDump.sh  alcorInit-lanes.py  alcorInit.new.py  alcorInit.new.sh  alcorInit.old.py  alcorInit.old.sh  alcorInit.py  alcorInit.sh  alcotInit-lanes.sh  channelMap.sh  hvdump.sh  runControl.sh  setParam.py  startDecode.sh  startQA.sh  startReadout.sh  tempstatus.sh
dht22/: dht22_monitor.py  dht_client.py  draw_dht22.C  draw_dht22.sh  start_dht22_monitor.sh
etc/: .gitignore  address_table2.xml  address_table3.xml  address_table4.xml  connection-cr.xml  connection.8.xml  connection.9.xml  connection.ch.8.xml  env.sh
firmware/: check_kc705.sh  dev-200mhz.bit  dev-200mhz.ltx  dev.bit  dev.ltx  new.bit  new.ltx  pro.bit  pro.ltx  program.sh  program.tcl
flask/: mini.py  startme.txt
gui/: main_page.py  readout.maxthreshold.conf  readout.range1.conf  test_page.py
hvsetup/: all.sh  dacs.py  find_serial.sh  hvsettings.bo.fbk  hvsettings.bo.fbk.opti  hvsettings.bo.fbk.opti.20c  hvsettings.bo.fbk.vover3  (+66 more)
readout/: CMakeLists.txt
readout/cmake/: FinduHAL.cmake
readout/macros/: coincidence.C  draw_allchannel.C  draw_lanechannel.C  find_coincindeces.C  makeMiniFrame.C  myMiniFrame.C  plotChip.C  pulser_coincidence.C  vbias_scan_draw_fbk.C  vbias_scan_draw_hama.C
readout/macros/inc/: alcor_library.h
readout/python/: interprocess.py  mapping.py  updatePCR.py
readout/scripts/: bolognaScan.sh  change_mode.sh  check_fwrev.sh  daniele.sh  doUpdatePCR.sh  draw_allchannel.sh  draw_lanechannel.sh  inhibit_monitor.sh  makePCR.sh  mode_reset.sh  rate.sh  rate_chip.sh  raw_counters.sh  scan_pulser_width.sh  scan_threshold.sh  scan_voltage.sh  spill_monitor.sh  standa_scan_board.sh  standa_superscan_xy.sh  start-readout-processes.2022-testbeam.sh  start-readout-processes.sh  start_controlhub.sh  status_monitor.sh  testpulse_monitor.sh  testpulse_readout.sh  trigger_fifo_download.sh  trigger_fifo_monitor.sh  trigger_monitor.sh  updatePCR.sh  updatePCR2.sh
readout/src/: CMakeLists.txt  alcor_block_register.cc  alcor_init.cc  alcor_register.cc  alcor_spi.h  block.cc  ctrl-readout.cc  decoder.cc  decoder.old.cc  deep-reset.cc  nano-readout.cc  pico-readout.cc  rate.cc  readout-v2.cc  readout.cc  register.cc  scan_thr.cc  simple-readout.cc  tifpa.cc  ureadout.cc
readout/src/alcor/: alcor.hh  spi.hh
src/: CMakeLists.txt  decoder.cc  readout.cc  register.cc
(+620 files in other folders)
